Fix Tab navigation bar links. (Fixes #1003)

--- a/sites/common/includes/base/tab-navigation-bar.html
+++ b/sites/common/includes/base/tab-navigation-bar.html
@@ -1,7 +1,7 @@
 <div id="tab-navigation-bar">
   <div class="tab-navigation-links">
-    <a href="https://stage.thunderbird.net">Thunderbird</a>
-    <a href="https://stage.tb.pro" class="active">Thunderbird Pro</a>
+    <a href="https://www.thunderbird.net">Thunderbird</a>
+    <a href="https://www.tb.pro" class="active">Thunderbird Pro</a>
   </div>
 </div>
 
