Adjust sign-in URL based on which page and which env (#1006)

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -217,7 +217,7 @@ body {
                     }
                 }
             }
-            li.nav-item-join-button {
+            li.nav-item-cta-button {
                 align-self: flex-end;
                 margin-left: 1.5rem;
                 margin-block: 0.5rem;
