Nov 2025 font updates for www.thunderbird.net

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -48,3 +48,7 @@
 @import "./common/fonts.less";
 @import "./common/tab-navigation-bar.less";
 @import "./common/shared-footer.less";
+
+// Nov 2025 font updates for www.thunderbird.net
+// Does not apply to updates.thunderbird.net
+@import "./new/2025-fonts.less";
