Put helpful comment back

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -145,6 +145,8 @@ body {
                 @media (min-width: @lg) {
                     align-items: center;
                     display: grid;
+
+                    // Take up the entire width.
                     grid-column: 1 / -1;
 
                     // Use auto for the middle three columns so that they
