Draft of styles for Dec 25 1a and 1b

--- a/assets/less/common/fonts.less
+++ b/assets/less/common/fonts.less
@@ -5,6 +5,7 @@
  */
 @import "fonts-metropolis.less";
 @import "fonts-inter.less";
+@import "fonts-opensans.less";
 
 // Families
 @family-metropolis: 'Metropolis', sans-serif;
