--- a/assets/less/appeals/dec25-1c.less
+++ b/assets/less/appeals/dec25-1c.less
@@ -17,7 +17,7 @@
     --appeal--letter-width-mobile: 23.8125rem;     // 381px
     --background-illustration-height: 1048px;
 
-    --background-dark-blue: #1a202c;
+    --background-blue: #254B7C;
     --background-yellow: #FBEA8B;
 
     --background-page-and-footer: #1a202c;
@@ -26,7 +26,6 @@
     --color-appeal-txt: #18181B;
     --color-appeal-bg-border: #1373d9;
     --color-headline: #FFDF99;
-    --color-illustration-credit: #FEFFFF;
 
     --txt: var(--color-appeal-txt);
     --shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
@@ -34,7 +33,6 @@
     --font-content: Open Sans, system-ui, sans-serif;
     --min-small-screen: 23.438rem;
 }
-
 
 // Ensure the footer is contained at the bottom and by default the page extends to at least a full page.
 html, body {
@@ -45,8 +43,7 @@ html, body {
 // Scope to just the appeal page
 .page-appeal-nov25 {
 
-    // background: linear-gradient(to left, var(--background-yellow) 50%, var(--background-blue) 50%);
-    background-color: var(--background-dark-blue);
+    background: linear-gradient(to left, var(--background-yellow) 50%, var(--background-blue) 50%);
 
     body {
         display: flex;
@@ -54,26 +51,8 @@ html, body {
     }
 
     main {
-
-        // Placeholder ================================================================================
-        // Regular DPI fallback
-        background-image: url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XS.webp');
-
-        // high-res PNG, if syntax is supported.
-        background-image: -webkit-image-set(
-            url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XS.webp') 1x,
-            url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XS-high-res.webp') 2x
-        );
-        background-image: image-set(
-            url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XS.webp') 1x,
-            url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XS-high-res.webp') 2x
-        );
-        // Placeholder ================================================================================
-
-
-
-
-        background-color: var(--background-dark-blue);
+        .mixin-background-image('/media/img/thunderbird/appeal/nov25/2025-nov-appeal-xs-bkg');
+        background-color: var(--background-blue);
         background-position: top center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -85,24 +64,10 @@ html, body {
 
 
         @media (min-width: @lg) {
-            // Placeholder ================================================================================
-            // Regular DPI fallback
-            background-image: url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XL.webp');
-
-            // high-res PNG, if syntax is supported.
-            background-image: -webkit-image-set(
-                url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XL.webp') 1x,
-                url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XL-high-res.webp') 2x
-            );
-            background-image: image-set(
-                url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XL.webp') 1x,
-                url('/media/img/thunderbird/appeal/dec25-1/appeal-Dec3-wallpaper-XL-high-res.webp') 2x
-            );
-            // Placeholder ================================================================================
-
-            background-position: left top;
+            .mixin-background-image('/media/img/thunderbird/appeal/nov25/2025-nov-appeal-xl-bkg');
+            background-position: center top;
             background-repeat: no-repeat;
-            background-size: auto 100%;
+            background-size: cover;
             min-height: var(--background-illustration-height);
             padding-bottom: unset;
         }
@@ -179,13 +144,14 @@ html, body {
             }
         }
 
-        // Placing inside #appeal-body for Nov25 and Dec25
+        // Placing inside #appeal-body for Nov25
         #appeal-heading {
             .mixin-font-styles(
                 @family-open-sans,
                 700,
                 2.25rem
             );
+
 
             // background: linear-gradient(to bottom, #FFEEEB 0.00%, #F8E6B2 0.68%, #F2D9A7 29.25%, #F8E6B2 29.93%, #F2D9A7 30.61%, #EAC999 62.59%);
             // -webkit-background-clip: text; /* For Safari and Chrome */
@@ -195,13 +161,8 @@ html, body {
             filter: drop-shadow(0px 2px 3px #0000004c);
             margin-block: 4rem;
             max-width: var(--appeal--letter-width-mobile);
-            width: 100%;
             text-transform: uppercase;
-
-            &.with-lowercase {
-                text-transform: unset;
-            }
-
+            width: 100%;
 
             @media (min-width: @sm) {
                 max-width: var(--appeal-content-width);
@@ -223,10 +184,9 @@ html, body {
                 // filter: unset;
 
                 display: block;
-                font-size: 2.5rem;
+                font-size: 3.75rem;
                 font-weight: 700;
                 text-shadow: 0px 2px 3px #0000004c;
-                text-transform: uppercase;
 
                 @media (min-width: @xl) {
                     font-size: 4.5rem;
@@ -259,48 +219,35 @@ html, body {
                 .donate-banner {
                     margin: 0 auto 2rem;
                     #decoration {
-                        left: -85px;
+                        left: 35px;
                         @media (min-width: @md) {
-                            left: 25px;
+                            left: 125px;
                         }
                     }
                 }
 
                 .donate-banner::after {
-                    left: -263px;
+                    left: -153px;
                     @media (min-width: @md) {
-                        left: -163px;
+                        left: -63px;
                     }
                 }
 
                 #donate-banner-left {
-                    font-size: 0.8rem;
+                    font-size: 1.5rem;
                     font-weight: 600;
                     line-height: 1.3;
 
                     b {
-                        font-size: 1.5rem;
+                        font-size: 2.5rem;
                         font-weight: 600;
                         letter-spacing: 2.21px;
-                    }
-
-                    @media (min-width: @md) {
-                        font-size: 1.5rem;
-                        b {
-                            font-size: 2.5rem;
-                        }
                     }
                 }
 
                 #donate-banner-right {
-                    display: block;
-                    font-weight: 400;
-                    b {
-                        display: block;
-                        font-weight: 600;
-                    }
                     @media (min-width: @md) {
-                        // display: none;
+                        display: none;
                     }
                 }
             }
@@ -327,29 +274,6 @@ html, body {
                 .closing-text {
                     font-size: 1rem;
                 }
-            }
-        }
-
-        #illustration-credit {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            max-width: var(--appeal--letter-width-mobile);
-            margin-top: 4rem;
-            // top: 3rem;
-            width: 100%;
-
-            @media (min-width: @sm) {
-                max-width: var(--appeal-content-width);
-            }
-
-            @media (min-width: @xxl) {
-                max-width: calc(var(--appeal-content-width) + 2rem);
-            }
-
-            p {
-                .web-body-small();
-                color: var(--color-illustration-credit);
             }
         }
     }
