Remove hard-coded en-US locale

--- a/sites/common/includes/base/tab-navigation-bar.html
+++ b/sites/common/includes/base/tab-navigation-bar.html
@@ -18,10 +18,10 @@
     // Determine which link this is and update.
     if (linkHost.includes('thunderbird.net')) {
       // Thunderbird link
-      link.href = isStage ? 'https://www-stage.thunderbird.net/en-US/' : 'https://www.thunderbird.net/en-US/';
+      link.href = isStage ? 'https://www-stage.thunderbird.net/' : 'https://www.thunderbird.net/';
     } else if (linkHost.includes('tb.pro')) {
       // Thunderbird Pro link
-      link.href = isStage ? 'https://stage.tb.pro/en-US/' : 'https://tb.pro/en-US/';
+      link.href = isStage ? 'https://stage.tb.pro/' : 'https://tb.pro/';
     }
   });
 
