--- a/assets/less/appeals/dec25-1.less
+++ b/assets/less/appeals/dec25-1.less
@@ -250,9 +250,17 @@ html, body {
 
             #donate-button-container {
                 margin: 0 auto;
+                // Quick fix for donation button being narrower than
+                // the letter container on mobile.
+                margin-left: -1px;
+                margin-right: -1px;
+
                 margin-top: -3rem;
 
                 @media (min-width: @md) {
+                    // Once wider than mobile, bring back auto margins.
+                    margin-left: auto;
+                    margin-right: auto;
                     max-width: 29.375rem;
                 }
 
