--- a/assets/less/appeals/dec25-1c.less
+++ b/assets/less/appeals/dec25-1c.less
@@ -109,40 +109,8 @@ html, body {
             align-items: flex-start;
             flex: 0 0 calc((100% - var(--width-left-column)) - 2rem);
             margin-top: unset;
-
-            // Prevents the glow from causing horizontal scroll
-            // and weird background color.
-            overflow-x: hidden;
         }
 
-        // The glow
-        &::before {
-            content: '';
-            position: absolute;
-            top: 4rem;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(var(--appeal--letter-width-mobile) + 16px);
-            height: calc(100% - 4rem); // Adjust to match letter-container height
-            background: radial-gradient(
-                ellipse at bottom right,
-                lighten(#2277A6, 40%),
-                transparent 50%
-            );
-            border-radius: 12px;
-            filter: blur(70px);
-            z-index: 1;
-            pointer-events: none;
-
-            @media (min-width: @sm) {
-                width: calc(var(--appeal-content-width) + 16px);
-            }
-
-            @media (min-width: @lg) {
-                left: 0;
-                transform: none;
-            }
-        }
 
         // Placing inside #appeal-body for Nov25
         #appeal-heading {
@@ -195,17 +163,51 @@ html, body {
         }
 
         .letter-container {
-            background: var(--color-appeal-main-bg);
+            // background color shifted to ::before pseudo-element
             border: 0.063rem solid var(--color-appeal-bg-border);
             border-radius: 0.75rem;
             box-shadow:
                 5px 3px 10px 0px rgba(0, 0, 0, 0.2);
             max-width: var(--appeal--letter-width-mobile);
             padding-bottom: 1rem;
+            position: relative;
             z-index: 2;
 
             @media (min-width: @sm) {
                 max-width: var(--appeal-content-width);
+            }
+
+            // Background that sits below the content
+            // and above the glow.
+            &::before {
+                background: var(--color-appeal-main-bg);
+                border-radius: 0.75rem;
+                content: '';
+                height: 100%;
+                position: absolute;
+                width: 100%;
+                z-index: -1;
+            }
+
+            // Glow, offset from the .letter-container.
+            &::after {
+                background: radial-gradient(
+                    ellipse at bottom right,
+                    #A7E0ED,
+                    transparent 50%
+                );
+                bottom: 0px;
+                content: '';
+                filter: blur(50px);
+                height: 80%;
+                position: absolute;
+                right: 10px;
+                width: 80%;
+                z-index: -2;
+
+                @media (min-width: @lg) {
+                    display: none;
+                }
             }
 
             #donate-button-container {
