--- a/assets/less/appeals/dec25-1.less
+++ b/assets/less/appeals/dec25-1.less
@@ -15,7 +15,7 @@
 :root {
     --appeal-content-width: 34.625rem;             // 554px
     --appeal--letter-width-mobile: 23.8125rem;     // 381px
-    --background-illustration-height: 1048px;
+    --background-illustration-height: 1070px;
 
     --background-dark-blue: #1a202c;
     --background-yellow: #FBEA8B;
@@ -45,7 +45,6 @@ html, body {
 // Scope to just the appeal page
 .page-appeal-nov25 {
 
-    // background: linear-gradient(to left, var(--background-yellow) 50%, var(--background-blue) 50%);
     background-color: var(--background-dark-blue);
 
     body {
@@ -144,39 +143,6 @@ html, body {
             align-items: flex-start;
             flex: 0 0 calc((100% - var(--width-left-column)) - 2rem);
             margin-top: unset;
-
-            // Prevents the glow from causing horizontal scroll
-            // and weird background color.
-            overflow-x: hidden;
-        }
-
-        // The glow
-        &::before {
-            content: '';
-            position: absolute;
-            top: 4rem;
-            left: 50%;
-            transform: translateX(-50%);
-            width: calc(var(--appeal--letter-width-mobile) + 16px);
-            height: calc(100% - 4rem); // Adjust to match letter-container height
-            background: radial-gradient(
-                ellipse at bottom right,
-                lighten(#2277A6, 40%),
-                transparent 50%
-            );
-            border-radius: 12px;
-            filter: blur(70px);
-            z-index: 1;
-            pointer-events: none;
-
-            @media (min-width: @sm) {
-                width: calc(var(--appeal-content-width) + 16px);
-            }
-
-            @media (min-width: @lg) {
-                left: 0;
-                transform: none;
-            }
         }
 
         // Placing inside #appeal-body for Nov25 and Dec25
@@ -187,10 +153,6 @@ html, body {
                 2.25rem
             );
 
-            // background: linear-gradient(to bottom, #FFEEEB 0.00%, #F8E6B2 0.68%, #F2D9A7 29.25%, #F8E6B2 29.93%, #F2D9A7 30.61%, #EAC999 62.59%);
-            // -webkit-background-clip: text; /* For Safari and Chrome */
-            // background-clip: text;
-            // color: transparent; /* Make the text color transparent */
             color: var(--color-headline);
             filter: drop-shadow(0px 2px 3px #0000004c);
             margin-block: 4rem;
@@ -207,21 +169,7 @@ html, body {
                 max-width: var(--appeal-content-width);
             }
 
-            @media (min-width: @md) {
-                // padding-left: unset;
-            }
-
-            @media (min-width: @xl) {
-                // font-size: 4rem;
-            }
-
             span {
-                // Undo styles for gradient text.
-                // background: unset;
-                // background-clip: unset;
-                // display: block;
-                // filter: unset;
-
                 display: block;
                 font-size: 2.5rem;
                 font-weight: 700;
@@ -235,24 +183,58 @@ html, body {
         }
 
         .letter-container {
-            background: var(--color-appeal-main-bg);
+            // background color shifted to ::before pseudo-element
             border: 0.063rem solid var(--color-appeal-bg-border);
             border-radius: 0.75rem;
             box-shadow:
                 5px 3px 10px 0px rgba(0, 0, 0, 0.2);
             max-width: var(--appeal--letter-width-mobile);
             padding-bottom: 1rem;
+            position: relative;
             z-index: 2;
 
             @media (min-width: @sm) {
                 max-width: var(--appeal-content-width);
             }
 
+            // Background that sits below the content
+            // and above the glow.
+            &::before {
+                background: var(--color-appeal-main-bg);
+                border-radius: 0.75rem;
+                content: '';
+                height: 100%;
+                position: absolute;
+                width: 100%;
+                z-index: -1;
+            }
+
+            // Glow, offset from the .letter-container.
+            &::after {
+                background: linear-gradient(130deg, rgba(13, 44, 91, 0.00) 0%, #26BAF5 77.4%);
+                bottom: 0px;
+                content: '';
+                filter: blur(50px);
+                height: 80%;
+                position: absolute;
+                right: 10px;
+                width: 80%;
+                z-index: -2;
+            }
+
             #donate-button-container {
                 margin: 0 auto;
+                // Quick fix for donation button being narrower than
+                // the letter container on mobile.
+                margin-left: -1px;
+                margin-right: -1px;
+
                 margin-top: -3rem;
 
                 @media (min-width: @md) {
+                    // Once wider than mobile, bring back auto margins.
+                    margin-left: auto;
+                    margin-right: auto;
                     max-width: 29.375rem;
                 }
 
@@ -299,9 +281,6 @@ html, body {
                         display: block;
                         font-weight: 600;
                     }
-                    @media (min-width: @md) {
-                        // display: none;
-                    }
                 }
             }
 
@@ -335,8 +314,7 @@ html, body {
             flex-direction: row;
             justify-content: flex-end;
             max-width: var(--appeal--letter-width-mobile);
-            margin-top: 4rem;
-            // top: 3rem;
+            margin-top: 2rem;
             width: 100%;
 
             @media (min-width: @sm) {
@@ -344,12 +322,14 @@ html, body {
             }
 
             @media (min-width: @xxl) {
+                margin-top: 3rem;
                 max-width: calc(var(--appeal-content-width) + 2rem);
             }
 
             p {
                 .web-body-small();
                 color: var(--color-illustration-credit);
+                margin: 0;
             }
         }
     }
