Address PR feedback

--- a/assets/less/common/tab-navigation-bar.less
+++ b/assets/less/common/tab-navigation-bar.less
@@ -52,6 +52,7 @@ body.tbpro #tab-navigation-bar {
     a:hover {
         background-color: @bg-active;
         color: @color-active;
+        cursor: default;
     }
 }
 
