Fix height difference of tab nav bar across tb.net and tb.pro

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -55,8 +55,7 @@ body {
     padding-top: @space-16;
 
     @media (min-width: @lg) {
-        padding-top: @space-24;
-        margin-top: -0.25rem;
+        padding-top: 1.25rem;
     }
 
     #site-header-nav {
