Control width of wait list form

--- a/assets/less/tbpro/waitlist.less
+++ b/assets/less/tbpro/waitlist.less
@@ -35,11 +35,7 @@ body {
 #waitlist-form {
     color: #4c4d58;
     height: 100%;
-    // padding-top: 2rem;
-
-    @media (min-width: @lg) {
-        margin-inline: 1rem;
-    }
+    padding-inline: 1rem;
 
     #form-header {
         .mixin-font-styles(
