Divides tb.pro footer into parts; renames for clarity

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -47,7 +47,7 @@
 @import "./common/space.less";
 @import "./common/fonts.less";
 @import "./common/tab-navigation-bar.less";
-@import "./common/shared-footer.less";
+@import "./common/common-footer.less";
 
 // Nov 2025 font updates for www.thunderbird.net
 // Does not apply to updates.thunderbird.net
