--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -12,7 +12,7 @@
 @import "buttons.less";
 
 @import "../common/tab-navigation-bar.less";
-@import "../common/shared-footer.less";
+@import "../common/common-footer.less";
 
 // ------------------------------------------------------------
 // border-box, everywhere
