--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -1,33 +1,13 @@
-<footer id="tb-footer">
-  <div id="site-nav">
-    <a id="nav-link-home" href="#">
-      {{ svg('tbpro/logo-tbpro') }}
-    </a>
-    <div class="site-nav-links">
-      <a href="#">Home</a>
-      <a href="#">Thundermail</a>
-      <a href="#">Appointment</a>
-      <a href="#">Send</a>
-    </div>
-  </div>
-  <div id="moz-nav">
-    <a id="moz-link-home" href="#">
-      {{ svg('mozilla-lockup-white-rgb') }}
-    </a>
-    <div class="moz-nav-links">
-      <a href="#">Privacy Policy</a>
-      <a href="#">Cookies</a>
-      <a href="#">Legal</a>
-      <a href="#">Send DMCA Notice</a>
-      <a href="#">Report Fraud</a>
-      <a href="#">Participation Guidelines</a>
-    </div>
-    <div id="tb-legal">
-      <p>Thunderbird is part of MZLA Technologies Corporation, a wholly owned subsidiary of Mozilla Foundation. Portions of this content are &copy;1998–{{ current_year }} by individual contributors. Content available under a Creative Commons license.</p>
-      <p>
-        <a href="#">Contribute to this site</a>
-      </p>
-    </div>
-  </div>
+{% macro svg_img(file_name, alt_text='', class_name='') %}
+<img
+  src="{{ static('svg/{file_name}.svg'.format(file_name=file_name)) }}"
+  alt="{{ alt_text }}"
+  class="{{ class_name }}"
+/>
+{% endmacro %}
 
+{# tb.pro footer includes tb.pro and mozilla footer blocks #}
+<footer id="tb-footer">
+  {% include 'includes/base/tbpro-footer-nav-block.html' %}
+  {% include 'includes/base/moz-footer-block.html' %}
 </footer>
