--- a/sites/tb.pro/includes/base/footer.html
+++ b/sites/tb.pro/includes/base/footer.html
@@ -8,6 +8,17 @@
 
 {# tb.pro footer includes tb.pro and mozilla footer blocks #}
 <footer id="tb-footer">
-  {% include 'includes/base/tbpro-footer-nav-block.html' %}
+  <div id="site-nav" class="primary-block">
+    <a id="nav-link-home" href="{{ url('tbpro.home') }}">
+      {{ svg('tbpro/logo-tbpro') }}
+    </a>
+    <div class="site-nav-links">
+      <a href="{{ url('tbpro.home') }}">Home</a>
+      <a href="{{ url('tbpro.thundermail') }}">Thundermail</a>
+      <a href="{{ url('tbpro.appointment') }}">Appointment</a>
+      <a href="{{ url('tbpro.send') }}">Send</a>
+    </div>
+  </div>
+
   {% include 'includes/base/moz-footer-block.html' %}
 </footer>
