Clarify that the "moz-footer.*" files are used for appeals only

--- a/assets/less/common/moz-footer.less
+++ b/assets/less/common/moz-footer.less
@@ -1,3 +1,6 @@
+// Subset of common-footer.less
+// Styles the version of the mozilla footer for the Appeals, starting with Nov 25
+
 @import "space.less";
 
 
