--- a/sites/common/includes/base/moz-footer.html
+++ b/sites/common/includes/base/moz-footer.html
@@ -1,3 +1,5 @@
+{# Mozilla Footer: links and legal, used by appeal pages as of Nov 2025 #}
+
   <div id="moz-footer">
     <a id="moz-link-home" href="{{ url('mozorg.home') }}">
       {{ svg('mozilla-lockup-white-rgb') }}
