Adjust styles for/around language selector and moz footer

--- a/assets/less/new/components/footer.less
+++ b/assets/less/new/components/footer.less
@@ -1,4 +1,3 @@
-
 footer {
   background-color: black;
   color: var(--color-gray-20);
@@ -11,7 +10,7 @@ footer {
   // Prevent overflow on smol devices
   box-sizing: border-box;
   // Always have this. (FIXME: This should be done cleaner)
-  gap: 60px !important;
+  gap: 2rem !important;
 }
 
 .footer-ln {
@@ -51,4 +50,9 @@ footer {
     justify-content: flex-start;
     align-content: center;
   }
+}
+
+.moz-footer-border {
+    border-top: 1px solid #121212;
+    padding-bottom: 0.25rem;
 }
