--- a/assets/less/new/components/forms.less
+++ b/assets/less/new/components/forms.less
@@ -1,7 +1,8 @@
 .form-select {
   width: 100%;
   background-color: var(--color-white);
-  padding: 0.75rem;
+  padding-inline: 0.25rem;
+  padding-block: 0.15rem;
   border-radius: var(--border-radius-sm);
   border: 1px solid var(--color-gray-30);
   appearance: none;
@@ -11,10 +12,16 @@
 }
 
 #lang_form {
+  align-items: center;
   display: flex;
-  flex-direction: column;
-  text-align: center;
+  flex-direction: row;
   gap: 1rem;
+  text-align: center;
+
+  label {
+      font-size: 1rem;
+      font-weight: 500;
+  }
 
   .form-select {
     font-size: 0.9rem;
