--- a/sites/www.thunderbird.net/includes/base/footer.html
+++ b/sites/www.thunderbird.net/includes/base/footer.html
@@ -46,6 +46,8 @@
     <aside>
       {% include 'includes/lang_switcher.html' %}
     </aside>
-    {% include 'includes/base/moz-footer-block.html' %}
+    <div class="moz-footer-border">
+      {% include 'includes/base/moz-footer-block.html' %}
+    </div>
   </div>
 </footer>
