Modify wait list page to submit in background as JSONP

--- a/assets/less/tbpro/index.less
+++ b/assets/less/tbpro/index.less
@@ -966,6 +966,13 @@ section#testimonials {
 
 
 
+// ------------------------------------------------------------
+// Utility classes
+// ------------------------------------------------------------
+.hidden {
+    display: none;
+}
+
 .debug {
     outline: 1px solid blue;
     @media (min-width: @md) {
