--- a/sites/tb.pro/includes/base/base.html
+++ b/sites/tb.pro/includes/base/base.html
@@ -68,5 +68,6 @@
     {% block additional_site_js %}{% endblock %}
 
     {% block js %}{% endblock %}
+    {% block extra_js %}{% endblock %}
   </body>
 </html>
