--- a/assets/less/tbpro/product/appointment.less
+++ b/assets/less/tbpro/product/appointment.less
@@ -1,4 +1,4 @@
-@import "../breakpoints.less";
+@import "../../common/breakpoints.less";
 @import "../../common/images.less";
 @import "../../common/space.less";
 @import "../nav.less";
