--- a/sites/common/includes/base/moz-footer-block.html
+++ b/sites/common/includes/base/moz-footer-block.html
@@ -9,12 +9,14 @@
     {{ svg('mozilla-lockup-white-rgb') }}
   </a>
   <div class="moz-nav-links">
+    {% block moz_footer_links %}
     <a href="{{ url('privacy') }}">{{_('Privacy Policy')}}</a>
     <a href="{{ url('privacy.notices.websites') }}">{{_('Cookies')}}</a>
     <a href="{{ url('legal.index') }}">{{_('Legal')}}</a>
     <a href="{{ url('legal.infringement') }}">{{_('Send DMCA Notice')}}</a>
     <a href="{{ url('legal.fraud-report') }}">{{_('Report Fraud')}}</a>
     <a href="{{ url('guidelines') }}">{{_('Participation Guidelines')}}</a>
+    {% endblock %}
   </div>
   <div id="tb-legal">
     <p>
