Prefill email from querystring param

--- a/sites/tb.pro/includes/base/base.html
+++ b/sites/tb.pro/includes/base/base.html
@@ -68,5 +68,7 @@
     {% block additional_site_js %}{% endblock %}
 
     {% block js %}{% endblock %}
+    {% block additional_page_js %}{% endblock %}
+
   </body>
 </html>
