style: adjust subscription callout padding per #1121

--- a/assets/less/tbpro/index.less
+++ b/assets/less/tbpro/index.less
@@ -699,7 +699,7 @@ section#details {
             border-radius: @space-12;
             margin-block: @gutter;
             margin-inline: @space-36;
-            padding: @space-36;
+            padding: @space-24 @space-16;
             text-align: center;
             width: 100%;
 
